--- a/privacy.html
+++ b/privacy.html
@@ -6,15 +6,16 @@
     <title>Happy Robotics Privacy Policy</title>
 </head>
 <body>
-<h2>Privacy Policy</h2>
-
-Effective Date: 07/01/2023
-
+  <h2>Privacy Policy</h2>
+  Effective Date: 07/01/2023
+<p>
 Our website is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and disclose information when you visit our website.
+</p>
 
 <h3>1. Information Collection</h3>
-
-We do not collect any personal information from visitors to our website. When you visit our site, we do not require you to provide any personally identifiable information such as your name, address, email address, or phone number.
+<p>
+  We do not collect any personal information from visitors to our website. When you visit our site, we do not require you to provide any personally identifiable information such as your name, address, email address, or phone number.
+</p>
 
 <h3>2. Use of Cookies</h3>
 
@@ -40,7 +41,7 @@ Our website is not intended for use by individuals under the age of 18. We do no
 
 We may update this Privacy Policy from time to time. Any changes will be posted on this page with a revised effective date. We encourage you to review this Privacy Policy periodically for any updates.
 
-8. Contact Us
+<h3>8. Contact Us</h3>
 
 If you have any questions or concerns about this Privacy Policy, please contact us at <a href='mail@happyrobotics.com'>mail@happyrobotics.com</a>
 
